toollabs-webservice (0.55) jessie; urgency=medium

  * Enable persisting custom Kubernetes resources to service manifests.
  * Black formatting and lint-friendly webservice file.

 -- Brooke Storm <bstorm@wikimedia.org>  Wed, 08 Jan 2020 20:00:00 +0000

toollabs-webservice (0.54) jessie; urgency=medium

  * Switch to jessie in changelog for debian-glue CI.

 -- Kunal Mehta <legoktm@member.fsf.org>  Mon, 06 Jan 2020 12:55:06 -0800

toollabs-webservice (0.53) trusty; urgency=medium

  * Fix for new Toolforge Kubernetes Ingress annotations T241008 [Bryan Davis]

 -- Brooke Storm <bstorm@wikimedia.org>  Wed, 18 Dec 2019 20:00:00 +0000

toollabs-webservice (0.52) trusty; urgency=medium

  * Urgent fix for label selector mismatch in T237836 [Brooke Storm]
  * Also protects against injection via naming

 -- Brooke Storm <bstorm@wikimedia.org>  Sat, 09 Nov 2019 20:00:00 +0000

toollabs-webservice (0.51) trusty; urgency=medium

  * Added buster images: golang111, jdk11, php73, python37,
    ruby25 [Hieu Pham]

 -- Hieu Pham <hpham@wikimedia.org>  Fri, 08 Nov 2019 20:00:00 +0000

toollabs-webservice (0.50) trusty; urgency=medium

  * Fix error in Ingress object and enable toolsbeta ingresses [Brooke Storm]

 -- Brooke Storm <bstorm@wikimedia.org>  Thu, 07 Nov 2019 20:00:00 +0000

toollabs-webservice (0.49) trusty; urgency=medium

  * Introduce the handling for the upgraded k8s cluster [Brooke Storm]

 -- Brooke Storm <bstorm@wikimedia.org>  Wed, 06 Nov 2019 20:00:00 +0000

toollabs-webservice (0.48) trusty; urgency=medium

  * Remove user warning on start/restart that access.log feature is not
    enabled by default [Hieu Pham]

 -- Hieu Pham <hpham@wikimedia.org>  Web, 06 Nov 2019 20:00:00 +0000

toollabs-webservice (0.47) trusty; urgency=medium

  * Disable access.log feature from lighttpdwebservice and warn user
    of this recent behavior [Hieu Pham]

 -- Hieu Pham <hpham@wikimedia.org>  Tue, 08 Oct 2019 20:00:00 +0000

toollabs-webservice (0.46) trusty; urgency=medium
