@@ -1,7 +1,10 @@
 #!/usr/bin/python -Es
 from __future__ import print_function
 import argparse
-import ConfigParser
+try:
+    from configparser import ConfigParser
+except ImportError:
+    from ConfigParser import ConfigParser
 import os
 import platform
 import re
@@ -205,7 +208,7 @@ if __name__ == "__main__":
             os.path.exists(os.path.expanduser("~/.webservicerc"))
             and "backend" not in tool.manifest
         ):
-            config = ConfigParser.ConfigParser()
+            config = ConfigParser()
             config.read(os.path.expanduser("~/.webservicerc"))
             backend = config.get("Default", "--backend")
         else:
