@@ -15,6 +15,7 @@ setup(
     description='Infrastructure for running webservices on tools.wmflabs.org',
     install_requires=[
         'PyYAML',
-        'pykube'
+        'pykube',
+        'six',
     ]
 )
