@@ -1,16 +1,13 @@
 [tox]
 minversion = 1.6
-envlist = flake8, flake8-bin
+envlist = {py27,py35,py37}-{flake8,flake8-bin}
+skip_missing_interpreters = true
 
 [flake8]
 exclude = bin,lib,include,.venv,.tox,dist,doc,build,*.egg,submodules
 
-[testenv:flake8]
-commands = flake8
+[testenv]
+commands =
+    flake8: flake8
+    flake8-bin: flake8 --filename=webservice-* scripts/
 deps = flake8
-basepython = python2.7
-
-[testenv:flake8-bin]
-commands = flake8 --filename=webservice-* scripts/
-deps = flake8
-basepython = python2.7
